--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html>funniest ways to extremley hurt yourself (so that you almost die)
 <head>
-<title>Page Title</title>
+<title>funniest ways to extremley hurt yourself (so that you almost die)</title>
 </head>
 <body>
 
