--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+<h1>funniest ways to extremley hurt yourself (so that you almost die)/h1>
+<li>run your self over
+  <li>parashute line snap
+    <li>torchure
+      <li>drowning in your own pool whil trying to make a youtube video
+        <li>food poisoning
+          <li>to much water
+            <li>laughing
+              <li>roler coaster gone wrong
+                <li>shot by a monkey
+                  <li>canabalisim
+          
+  
+  
+  
+  </body>
 </html>
