--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 <body>
 
 <h1>funniest ways to extremley hurt yourself (so that you almost die)/h1>
-<li>run your self over
-  <li>parashute line snap
-    <li>torchure
-      <li>drowning in your own pool whil trying to make a youtube video
-        <li>food poisoning
-          <li>to much water
-            <li>laughing
-              <li>roler coaster gone wrong
-                <li>shot by a monkey
-                  <li>canabalisim
+<li>run your self over</li>
+  <li>parashute line snap</li>   
+  <li>torchure</li>
+      <li>drowning in your own pool whil trying to make a youtube video</li>
+        <li>food poisoning</li>
+          <li>to much water</li>
+            <li>laughing</li>
+              <li>roler coaster gone wrong</li>
+                <li>shot by a monkey</li>
+                  <li>canabalisim</li>
           
   
   
